# Clean-Arch-C

./: .gitignore  CMakeLists.txt
includes/: auth.h  entity.h  helper.h  item.h  migrator.h
src/: main.c
src/auth/: auth.data.c  auth.service.c
src/helper/: helper.c
src/item/: item.data.c  item.service.c
src/migrator/: migrator.c
